--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong> Thomas Talukdar</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+        <p class="section__subtitle section__subtitle--intro">full-stack developer</p>
         <img src="./assets/portfolioPhoto.jpg" alt="a picture of thomas Talukdar" class="intro__img">
     </section>
     <!-- My services-->
@@ -43,11 +43,14 @@
         <div class="services">
             <div class="service">
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <p>Full Stack Developer.
+                    I'm a certified full-stack developer with expertise in HTML, CSS, JavaScript, React.js, Node.js,
+                    Express.js, MongoDB, and Mongoose.
+                    I hold a Full Stack Development Certification from Newton School.
+                    I love crafting innovative web solutions and am passionate about continuous learning.
+                    Let's collaborate on your next project!</p>
             </div>
-            <div class="service">
+            <!-- <div class="service">
                 <h3>E-Commerce</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -58,21 +61,20 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
-            </div>
+            </div> -->
         </div>
         <a href="#work" class="btn">My Work</a>
     </section>
     <!-- About Me -->
     <section class="about-me " id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Designer & developer based out of NYC</p>
+        <p class="section__subtitle section__subtitle--about">Software engineer & full-stack developer</p>
         <div class="about-me__body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+            <p>I'm a passionate Engineer and full-stack developer. My creative journey is a blend of
+                imagination and innovation. With a keen eye for design and a knack for coding, I craft digital
+                experiences that captivate and inspire. From sleek user interfaces to elegant websites, I'm committed to
+                making every pixel count. Let's turn your ideas into stunning digital realities. Get in touch, and let's
+                create something extraordinary!</p>
         </div>
         <img src="./assets/portfolioPhoto.jpg" alt="thomas talukdar picture" class="about-me__img">
     </section>
@@ -127,16 +129,18 @@
     <footer class="footer">
         <a href="mailto:thomaswizfan@gmail.com" class="footer__link">thomaswizfan@gmail.com</a>
         <ul class="social-list">
-            <li class="social-list__item"><a href="https://github.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://github.com/tliontube" class="social-list__link">
                     <i class="fa-brands fa-github"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://youtube.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.youtube.com/channel/UCptTYfnuwry4DZVCzV2pQHA"
+                    class="social-list__link">
                     <i class="fa-brands fa-youtube"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://linkedin.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.linkedin.com/in/thomas-talukdar-3067a820a/"
+                    class="social-list__link">
                     <i class="fa-brands fa-linkedin"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://instagram.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.instagram.com/tliontube/" class="social-list__link">
                     <i class="fa-brands fa-instagram"></i>
                 </a></li>
         </ul>
