--- a/protfolio-item.html
+++ b/protfolio-item.html
@@ -51,16 +51,16 @@
     <footer class="footer">
         <a href="mailto:thomaswizfan@gmail.com" class="footer__link">thomaswizfan@gmail.com</a>
         <ul class="social-list">
-            <li class="social-list__item"><a href="https://github.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://github.com/tliontube" class="social-list__link">
                     <i class="fa-brands fa-github"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://youtube.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.youtube.com/channel/UCptTYfnuwry4DZVCzV2pQHA" class="social-list__link">
                     <i class="fa-brands fa-youtube"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://linkedin.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.linkedin.com/in/thomas-talukdar-3067a820a/" class="social-list__link">
                     <i class="fa-brands fa-linkedin"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://instagram.com" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.instagram.com/tliontube/" class="social-list__link">
                     <i class="fa-brands fa-instagram"></i>
                 </a></li>
         </ul>
