--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <div class="services">
             <div class="service">
                 <h3>Web Development</h3>
-                <p>Full Stack Developer.
-                    I'm a certified full-stack developer with expertise in HTML, CSS, JavaScript, React.js, Node.js,
+                <p> I'm a certified full-stack developer with expertise in HTML, CSS, JavaScript, React.js, Node.js,
                     Express.js, MongoDB, and Mongoose.
                     I hold a Full Stack Development Certification from Newton School.
                     I love crafting innovative web solutions and am passionate about continuous learning.
