--- a/index.html
+++ b/index.html
@@ -83,16 +83,20 @@
         <p class="section__subtitle">A selection of my range of work</p>
         <div class="portfolio">
             <!-- portfolio 01 -->
-            <a href="protfolio-item.html" class="portfolio__item">
-                <img src="./assets/portfolioPhoto.jpg" alt="portfolio__img" class="portfolio__img">
+            <a href="protfolio-beyoung.html" class="portfolio__item">
+                <img src="./assets/beyoung.jpg" alt="portfolio__img" class="portfolio__img">
             </a>
             <!-- portfolio 02 -->
-            <a href="protfolio-item.html" class="portfolio__item">
-                <img src="./assets/portfolioPhoto.jpg" alt="portfolio__img" class="portfolio__img">
+            <a href="#work" class="portfolio__item">
+                <img src="./assets/ComingSoon.jpg" alt="portfolio__img" class="portfolio__img">
             </a>
             <!-- portfolio 03 -->
-            <a href="protfolio-item.html" class="portfolio__item">
-                <img src="./assets/portfolioPhoto.jpg" alt="portfolio__img" class="portfolio__img">
+            <a href="#work" class="portfolio__item">
+                <img src="./assets/ComingSoon.jpg" alt="portfolio__img" class="portfolio__img">
+            </a>
+            <!-- portfolio 04 -->
+            <a href="#work" class="portfolio__item">
+                <img src="./assets/ComingSoon.jpg" alt="portfolio__img" class="portfolio__img coming-soon">
             </a>
         </div>
     </section>
