--- a/protfolio-beyoung.html
+++ b/protfolio-beyoung.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Thomas Portfolio Website</title>
 </head>
@@ -33,19 +33,27 @@
         <h1 class="section__title section__title--intro">
             The title<strong>of my project</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-        <img src="./assets/portfolioPhoto.jpg" alt="a picture of thomas Talukdar" class="intro__img">
+        <p class="section__subtitle section__subtitle--intro">BEYOUNG ClONE</p>
+        <img src="./assets/beyoung.jpg" alt="a picture of thomas Talukdar" class="intro__img project__img">
     </section>
 
 
     <div class="portfolio-item-individual">
-        <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas
-            sapiente voluptate, magnam ipsum eius earum?</p>
-        <img src="./assets/portfolioPhoto.jpg" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti
-            fugiat ducimus consequatur incidunt?</p>
-        <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas
-            sapiente voluptate, magnam ipsum eius earum?</p>
+        <p>Beyoung is a prominent and influential player in the Indian online fashion and lifestyle market, having left
+            a substantial imprint on the industry. Renowned for its vast array of stylish and casual clothing,
+            accessories, and lifestyle products catering to men, women, and children, Beyoung has garnered a devoted
+            following among fashion-forward individuals, especially the youth, across the nation.</p>
+        <img src="./assets/beyoung.jpg" alt="">
+        <p>Tech Stack: HTML, CSS, JavaScript, React</p>
+        <p>The aspiration of this project is to meticulously replicate the dynamic and engaging e-commerce website of
+            Beyoung, offering users a shopping encounter akin to the original platform. By embarking on this ambitious
+            endeavor, we endeavor to gain invaluable insights into the intricate challenges and multifaceted intricacies
+            that underpin the development of a comprehensive e-commerce ecosystem. A primary emphasis of this
+            undertaking will be the creation of an intuitive, user-friendly, and aesthetically pleasing user interface
+            that aligns with the ethos of Beyoung.</p>
+        <div class="hosted__btn--div">
+           <a class="hosted__btn" href="protfolio-beyoung.html">Click to view the hosted Project</a>
+        </div>
     </div>
     <!-- footer -->
     <footer class="footer">
@@ -54,10 +62,12 @@
             <li class="social-list__item"><a href="https://github.com/tliontube" class="social-list__link">
                     <i class="fa-brands fa-github"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://www.youtube.com/channel/UCptTYfnuwry4DZVCzV2pQHA" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.youtube.com/channel/UCptTYfnuwry4DZVCzV2pQHA"
+                    class="social-list__link">
                     <i class="fa-brands fa-youtube"></i>
                 </a></li>
-            <li class="social-list__item"><a href="https://www.linkedin.com/in/thomas-talukdar-3067a820a/" class="social-list__link">
+            <li class="social-list__item"><a href="https://www.linkedin.com/in/thomas-talukdar-3067a820a/"
+                    class="social-list__link">
                     <i class="fa-brands fa-linkedin"></i>
                 </a></li>
             <li class="social-list__item"><a href="https://www.instagram.com/tliontube/" class="social-list__link">
