--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 making every pixel count. Let's turn your ideas into stunning digital realities. Get in touch, and let's
                 create something extraordinary!</p>
         </div>
-        <img src="./assets/portfolioPhoto.jpg" alt="thomas talukdar picture" class="about-me__img">
+        <img src="./assets/resume .jpg" alt="thomas talukdar picture" class="about-me__img">
     </section>
     <!-- My Work -->
     <section class="my-work" id="work">
