--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <img src="./assets/beyoung.jpg" alt="portfolio__img" class="portfolio__img">
             </a>
             <!-- portfolio 02 -->
-            <a href="#work" class="portfolio__item">
-                <img src="./assets/ComingSoon.jpg" alt="portfolio__img" class="portfolio__img">
+            <a href="portfolio-airbnb.html" class="portfolio__item">
+                <img src="./assets/airBnb.jpg" alt="portfolio__img" class="portfolio__img">
             </a>
             <!-- portfolio 03 -->
             <a href="#work" class="portfolio__item">
