--- a/portfolio-airbnb.html
+++ b/portfolio-airbnb.html
@@ -55,7 +55,7 @@
             be the crafting of an intuitive, user-centric, and visually captivating user interface that harmonizes
             seamlessly with Airbnb's core values.</p>
         <div class="hosted__btn--div">
-            <a class="hosted__btn" href="protfolio-beyoung.html">Click to view the hosted Project</a>
+            <a class="hosted__btn" href="portfolio-airbnb.html">Click to view the hosted Project</a>
         </div>
     </div>
     <!-- footer -->
