--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong> Thomas Talukdar</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">full-stack developer</p>
+        <p class="section__subtitle section__subtitle--intro">Full-Stack Developer</p>
         <img src="./assets/portfolioPhoto.jpg" alt="a picture of thomas Talukdar" class="intro__img">
     </section>
     <!-- My services-->
@@ -67,7 +67,7 @@
     <!-- About Me -->
     <section class="about-me " id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Software engineer & full-stack developer</p>
+        <p class="section__subtitle section__subtitle--about">Software Engineer & Full-Stack Developer</p>
         <div class="about-me__body">
             <p>I'm a passionate Engineer and full-stack developer. My creative journey is a blend of
                 imagination and innovation. With a keen eye for design and a knack for coding, I craft digital
