--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./assets/logoPortfolio.jpg" alt="">
+            <a href="#"><img src="./assets/logoPortfolio.jpg" alt=""></a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
