--- a/protfolio-beyoung.html
+++ b/protfolio-beyoung.html
@@ -52,7 +52,7 @@
             undertaking will be the creation of an intuitive, user-friendly, and aesthetically pleasing user interface
             that aligns with the ethos of Beyoung.</p>
         <div class="hosted__btn--div">
-           <a class="hosted__btn" href="protfolio-beyoung.html">Click to view the hosted Project</a>
+           <a class="hosted__btn" href="https://beyoungclone.netlify.app">Click to view the hosted Project</a>
         </div>
     </div>
     <!-- footer -->
